fixed product spacing in media query

--- a/client/src/screens/Listing/Listing.css
+++ b/client/src/screens/Listing/Listing.css
@@ -35,4 +35,7 @@
     margin-top: 50px;
     padding: 10px;
   }
+  .price {
+    margin-bottom: 25px
+  }
 }
